# TranscriptionService

./: README.md  pyproject.toml
app/: main.py
app/models/: transcription_model.py
app/routers/: transcription.py
app/services/: transcription_service.py
